# HyperMR

./: .gitignore  CMakeLists.txt  README.md  license.txt
NeuroSim/: .depend  Adder.cpp  AdderTree.cpp  AdderTree.h  Buffer.cpp  CMakeLists.txt  Chip.cpp  Chip.h  HTree.cpp  Mux.cpp  NetWork_Matrix.csv  Param.cpp  Param.h  ProcessingUnit.cpp  ProcessingUnit.h  README.md  SubArray.cpp  SubArray.h  Technology.cpp  Tile.cpp  Tile.h  main.cpp  makefile
include/array/: Dimension.h  Statement.h
include/query/: Executor.h  Operator.h  WorkloadPattern.h
include/simulator/: NeuroSimAPI.h
include/storage/: HyperEdge.h  HyperGraph.h  LogicalPE.h  LogicalTile.h  Matrix.h  Storage.h
src/: CMakeLists.txt
src/query/: Executor.cpp  Operator.cpp  WorkloadPattern.cpp
src/simulator/: NeuroSimAPI.cpp
src/storage/: HyperEdge.cpp  HyperGraph.cpp  HyperMR.cpp  Matrix.cpp
test/: test.cpp
test/config/: HyperMR-v3.ini  exp1_MVM.txt  exp2_synthetic_workloads.txt  exp3_gaussian_smoothing.txt  exp4_baselines.txt  time_limit_config.txt
test/datasets/: decompression.sh
test/datasets/SDSS/: SpecObj.txt  sdss.py
test/info/: large_matrices.txt  sdss.txt  small_matrices.txt  symmetric_matrices.txt
test/output/HyperMR/: 7226197507411564544.mtx  7979442966656997376.mtx  7979452587383740416.mtx  7979453137139554304.mtx  7979453686895368192.mtx  7979462482988390400.mtx  7979463307622111232.mtx  7979464132255832064.mtx  7979472928348854272.mtx  7979473203226761216.mtx  7979473478104668160.mtx  7979473752982575104.mtx  7979482549075597312.mtx  7979483648587225088.mtx  7979492994436061184.mtx  7979493269313968128.mtx  7979493819069782016.mtx  7979494093947688960.mtx  7979494643703502848.mtx  9221352084074682368.mtx  Lederberg.mtx  MVM.txt  adaptive_storage.txt  bayer02.mtx  bayer03.mtx  bayer04.mtx  bayer09.mtx  bayer10.mtx  circuit_3.mtx  cost_analysis.txt  crystm01.mtx  crystm02.mtx  crystm03.mtx  example.mtx  extr1.mtx  gaussian_smoothing.txt  hydr1.mtx  illc1850.mtx  qh1484.mtx  qh882.mtx  (+5 more)
test/output/Uncompression/: MVM.txt  adaptive_storage.txt  cost_analysis.txt  cost_model.txt  gaussian_smoothing.txt
test/tools/: input.txt  print_latency.py  print_tiles.py  sdss_mtx.py
